Thu Aug  2 21:31:32 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * examples/ConfigViewer/MainFrame.cpp:

          ZAP the last NULL usage in the distrubtion.

Thu Aug  2 20:43:18 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * apps/JAWS/clients/WebSTONE/src/bench.c:

          Zap NULL usage.

Thu Aug  2 20:24:22 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:

          No-thread builds, instances of ACE_TSS use their destructor
          instead of the static cleanup() method for deleting the object
          they point to. Adding a destructor specialization to enable
          non-ownership ACE_TSS behavior with no-thread builds for
          ACE_Service_Gestalt's.

Thu Aug  2 19:34:17 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * bin/fuzz.pl:

          Enhanced NULL check.

Thu Aug  2 14:19:46 UTC 2007  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_other_tests.lst:
          Added a new test TAO/orbsvcs/tests/Simple_Naming/run_test_ipv6.pl

Thu Aug  2 11:43:35 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:
          Removing extra semicolon

Thu Aug  2 09:46:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Fixed gcc4 warnings

Thu Aug  2 09:22:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Use regular reinterpret_cast, use 0 instead of NULL and
          in case setspecific fails just do a printf, not an ACE_DEBUG
          because that will use ACE_Log_Msg again.

Wed Aug  1 21:39:04 UTC 2007  Dale Wilson  <wilsond@ociweb.com>

        * bin/tao_orb_tests.lst:
          Enable TAO\tests\Bug_2935_Regression

Wed Aug  1 18:55:12 UTC 2007  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ConfigList.pm:
          Added '-Exclude <mask>' option to be able to finetune the actual